--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "homepage": "http://shanboralkar.github.io/contact-list",
   "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "eslint": "^6.8.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^5.5.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "tailwindcss": "^1.2.0"
@@ -14,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
